[tool.poetry]
name = "docker-sdk"
version = "0.1.0"
description = ""
authors = ["joao-pedro-rdo <joaoprdo2.aluno@unipampa.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docker = "^7.1.0"
python-docker = "^0.2.0"
certifi = "2023.11.17"
argparse = "^1.4.0"
streamlit = "^1.38.0"
pandas = "^2.2.2"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
